<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginPageAcrivity">

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/fit_life"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/welcome"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login" />

        <TextView
            android:id="@+id/tv_log_capt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/log_capt"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_log" />

        <TextView
            android:id="@+id/tv_email_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/tv_email"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_log_capt" />

        <EditText
            android:id="@+id/et_email_log"
            android:layout_width="285dp"
            android:layout_height="44dp"
            android:background="@drawable/edit_text_background_selector"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_log" />

        <TextView
            android:id="@+id/tv_password_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/tv_password"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_email_log"
            app:layout_constraintTop_toBottomOf="@+id/et_email_log" />

        <EditText
            android:id="@+id/et_password_log"
            android:layout_width="285dp"
            android:layout_height="44dp"
            android:background="@drawable/edit_text_background_selector"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_log" />

        <CheckBox
            android:id="@+id/checkBox_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:layout_marginStart="5dp"
            android:text="@string/remember"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/et_password_log"
            app:layout_constraintTop_toBottomOf="@+id/et_password_log" />

        <TextView
            android:id="@+id/tv_lupa_kata_sandi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/lupa_password"
            android:textColor="@color/greenPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toEndOf="@+id/checkBox_log"
            app:layout_constraintTop_toBottomOf="@+id/et_password_log" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="285dp"
            android:layout_height="46dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_theme_2"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_log" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/dny_have_acc"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.350"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

        <TextView
            android:id="@+id/login_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/signup"
            android:textSize="12sp"
            android:textColor="@color/greenPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>