<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterPageAcrivity">

        <ImageView
            android:id="@+id/iv_signup"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/fit_life"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/welcome"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_signup" />

        <TextView
            android:id="@+id/tv_reg_capt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/reg_capt"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_reg" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/tv_nama"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_reg_capt"
            app:layout_constraintTop_toBottomOf="@+id/tv_reg_capt" />

        <EditText
            android:id="@+id/et_nama"
            android:layout_width="285dp"
            android:layout_height="44dp"
            android:background="@drawable/edit_text_background_selector"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/tv_email"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_nama"
            app:layout_constraintTop_toBottomOf="@+id/et_nama" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="285dp"
            android:layout_height="44dp"
            android:background="@drawable/edit_text_background_selector"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/tv_password"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_email"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="285dp"
            android:layout_height="44dp"
            android:background="@drawable/edit_text_background_selector"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:layout_marginStart="5dp"
            android:text="@string/remember"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="285dp"
            android:layout_height="46dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/greenPrimary"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/dy_have_acc"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.385"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

        <TextView
            android:id="@+id/signin_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/signin"
            android:textSize="12sp"
            android:textColor="@color/greenPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>